--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3080,57 +3080,10 @@ a {
     padding: 1rem;
   }
 }
-.cid-ukxowqXZ5K {
+.cid-ukxovlcD2g {
   padding-top: 10rem;
   padding-bottom: 6rem;
-  background: #ffffff;
-}
-.cid-ukxowqXZ5K .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-ukxowqXZ5K .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-ukxowqXZ5K .google-map {
-  height: 30rem;
-  position: relative;
-  border-radius: 2rem;
-}
-.cid-ukxowqXZ5K .google-map iframe {
-  height: 100%;
-  width: 100%;
-  border-radius: 2rem;
-}
-.cid-ukxowqXZ5K .google-map [data-state-details] {
-  color: #6b6763;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.cid-ukxowqXZ5K .google-map[data-state] {
-  background: #e9e5dc;
-}
-.cid-ukxowqXZ5K .google-map[data-state="loading"] [data-state-details] {
-  display: none;
-}
-.cid-ukxowqXZ5K .content-head {
-  max-width: 800px;
-}
-.cid-ukxovlcD2g {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #edefeb;
+  background-color: #2f3f6e;
 }
 .cid-ukxovlcD2g .mbr-fallback-image.disabled {
   display: none;
@@ -3174,6 +3127,9 @@ a {
 }
 .cid-ukxovlcD2g .content-head {
   max-width: 800px;
+}
+.cid-ukxovlcD2g .mbr-section-title {
+  color: #ffffff;
 }
 .cid-ukxeJpgvey {
   padding-top: 6rem;
